# insightIQ

./: .gitignore  CURSOR BUILD PROMPT.md  INSIGHTIQ V2 ENHANCEMENTS.md  README.md
insightiq/backend/: pyproject.toml
insightiq/backend/config/: settings.py
insightiq/backend/config/rag_profiles/: advanced.yaml  agentic.yaml  graph.yaml  naive.yaml  standard.yaml
insightiq/backend/core/: chat_history.py  db.py  db_types.py  deps.py  dev_auth.py  models.py  registry.py  request_context.py  security.py  tenancy.py  types.py
insightiq/backend/core/audit/: service.py
insightiq/backend/core/dashboard/: base.py  factory.py
insightiq/backend/core/data/: connection.py  normalize.py  runner.py  schema.py  scope.py  session.py  sql_schema_check.py  types.py
insightiq/backend/core/documents/: versioning.py
insightiq/backend/core/embeddings/: base.py  factory.py  hash_dev.py
insightiq/backend/core/events/: bus.py
insightiq/backend/core/export/: base.py  factory.py  response_render.py
insightiq/backend/core/graph/: entity_extractor.py  neo4j_store.py  retrieval.py
insightiq/backend/core/ingestion/: base.py  html_sanitize.py  jobs.py  pipeline_router.py  span_mapper.py  web_scraper.py
insightiq/backend/core/jobs/: report_scheduler.py
insightiq/backend/core/llm/: base.py  factory.py  heuristic.py  openai.py
insightiq/backend/core/notifications/: email.py
insightiq/backend/core/prompts/: access.py  bindings.py  judge.py  renderer.py
insightiq/backend/core/rag/: context.py  engine.py  eval.py  fusion.py  graph_builder.py  highlight_resolver.py  nodes.py  profiles.py  state.py
insightiq/backend/core/response/: classifier.py  display.py  formatter.py  types.py
insightiq/backend/core/retrieval/: bm25_index.py  lexical.py  qdrant_store.py
insightiq/backend/core/telemetry/: logging.py  otel.py
insightiq/backend/gateway/: main.py  middleware.py
insightiq/backend/migrations/: env.py  portable.py  script.py.mako
insightiq/backend/migrations/versions/: 0001_init.py  0002_data_sources.py  0003_phase2.py  (+9 more)
insightiq/backend/scripts/: generate_dev_keys.py
insightiq/backend/tests/: test_chat_history.py  test_chunk_lookup.py  test_chunking.py  test_connection.py  test_core.py  test_dashboard.py  test_datasource_scope.py  test_document_versioning.py  test_eval.py  test_export.py  test_graph_retrieval.py  test_highlight_resolver.py  test_hybrid_retrieval.py  test_phase2.py  test_prompt_bindings.py  test_prompt_studio.py  test_qdrant_filter.py  test_rag.py  test_rag_grounding.py  test_rag_synthesis.py  test_response_display.py  test_sql_schema_check.py  test_sqlite_database.py  test_talk_to_data_sql.py  test_telemetry.py  test_tenancy.py  test_web_scrape_chunker.py
(+109 files in other folders)
