[project]
name = "insightiq-backend"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "sqlalchemy[asyncio]>=2.0.32",
  "asyncpg>=0.29.0",
  "alembic>=1.13.2",
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "httpx>=0.27.2",
  "email-validator>=2.2.0",
  "duckdb>=1.1.0",
  "langgraph>=0.2.0",
  "qdrant-client>=1.12.0",
  "markitdown>=0.0.1",
  "sympy>=1.13.0",
  "pyyaml>=6.0.0",
  "jinja2>=3.1.0",
]

[tool.uv]
dev-dependencies = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_any_generics = true

