[project]
name = "insightiq-backend"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "python-multipart>=0.0.9",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "sqlalchemy[asyncio]>=2.0.32",
  "asyncpg>=0.29.0",
  "alembic>=1.13.2",
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "bcrypt>=4.0.0",
  "httpx>=0.27.2",
  "email-validator>=2.2.0",
  "duckdb>=1.1.0",
  "langgraph>=0.2.0",
  "qdrant-client>=1.12.0",
  "markitdown[all]>=0.0.1",
  "pymupdf>=1.24.0",
  "pillow>=10.4.0",
  "openai>=1.40.0",
  "sympy>=1.13.0",
  "pyyaml>=6.0.0",
  "jinja2>=3.1.0",
  "redis>=5.0.0",
  "prometheus-client>=0.21.0",
  "opentelemetry-api>=1.27.0",
  "opentelemetry-sdk>=1.27.0",
  "opentelemetry-instrumentation-fastapi>=0.48b0",
  "opentelemetry-exporter-otlp-proto-grpc>=1.27.0",
  "reportlab>=4.2.0",
  "python-pptx>=1.0.2",
]

[project.optional-dependencies]
# Enterprise database connectors. Install with: uv sync --extra connectors
connectors = [
  "pymssql>=2.3.0",
  "oracledb>=2.4.0",
  "snowflake-connector-python>=3.12.0",
  "PyHive>=0.7.0",
  "thrift>=0.20.0",
  "google-cloud-bigquery>=3.25.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["B008", "E501", "UP046"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_any_generics = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
